final modification Inshallah

--- a/ألتزام العمل.html
+++ b/ألتزام العمل.html
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/hotel-room.css">
-    <link rel="stylesheet" href="css/info/forget-pass.css">
-    <link rel="stylesheet" href="css/info/withdraw-profits.css">
+    <link rel="stylesheet" href="css/info/business-commitment.css">
     <link rel="stylesheet" href="css/style-rtl.css">
+    <style>
+        #sections{
+            padding-top: 40px !important;
+            text-align: left;
+        }
+    </style>
+
 </head>
 <body>
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,11 +52,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="withdraw-profits.html">English</a>
+                        <a class="lang-text" href="business-commitment.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="الأرباح.html">Arabic</a>
+                            <a class="lang-text" href="التزام العمل.html">Arabic</a>
                         </div>
 
                     </div>
@@ -70,7 +76,7 @@
     </div>
 
     <nav class="nav-bottom">
-        <ul  >
+        <ul>
             <li><a href="https://ar.pyramid-challenge.com/">
                 الرئيسيه
             </a></li>
@@ -85,7 +91,6 @@
             </a></li>
             <li><a href=" https://ar.pyramid-challenge.com/contact-us">
                 أتصل بنا
-
             </a></li>
         </ul>
     </nav>
@@ -118,11 +123,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="withdraw-profits.html">English</a>
+                            <a class="lang-text" href="business-commitment.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="الأرباح.html">Arabic</a>
+                                <a class="lang-text" href="التزام العمل.html">Arabic</a>
                             </div>
 
                         </div>
@@ -164,7 +169,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -216,7 +221,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -228,7 +233,7 @@
 
 
             <li>
-                <a href="التزام%20العمل.html">
+                <a href="التزام العمل.html">
 
 
                     ألتزام العمل
@@ -293,189 +298,190 @@
 
 </section>
 <!-- end of nav-->
-<section id="sections-hotel">
-   <div id="withdraw-profit">
-       <div class="container">
-           <div class="section-back">
-               <a href="من%20نحن.html">الرجوع لأقسام الفندق </a>
-           </div>
-       </div>
-       <div class="container">
-           <div class="hotel-info">
-               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                   <a href="#" id="withdraw-title">
-                       طلب الأرباح
-                   </a>
-               </h3>
 
-           </div>
-       </div>
-   </div>
-</section>
 <!-- start of form-->
-<section id="form">
-    <div class="container">
-        <div class="gold-bank">
-         <div id="cold-gold-info">
-             <div class="gold-info">
-                 <ul>
-                     <li>
-                         <a href="#">
-                             مجموع أرباحك :  <span> xxx</span>
-                         </a>
-                     </li>
-                     <li>
-                         <a href="#">
-                             الأرباح المدفوعه : <span> xxx</span>
-                         </a>
-                     </li>
-                     <li>
-                         <a href="#">
-                            الأرباح المتبقية :<span> xxx</span>
-                         </a>
-                     </li>
-                 </ul>
-             </div>
-         </div>
-            <div class="img-gold">
-                <img src="img/img-gold.png" alt="img-gold">
-            </div>
-        </div>
+<section id="sections-hotel">
+  <div id="business-rtl">
+      <div class="container-rtl">
+          <div class="section-back">
+              <a href="من%20نحن.html">
+                  الرجوع لأقسام الفندق
+              </a>
+          </div>
+          <div class="section-title">
+              <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+              ><a href="#">
+                  ألتزام العمل
 
-    </div>
-    <div class="container">
-        <div class="mount-tip">
-            <h2> سيتم خصم 5% كرسوم تحويل لشركة باى بال</h2>
-        </div>
-    </div>
-    <div class="container">
+              </a></h2>
+          </div>
+      </div>
+      <div class="container-rtl">
+          <div class="hotel-info">
+              <h3>
+                  لقد قمت بنفسك بتحديد ألتزام عملك
 
-        <form action="#" class="form">
-            <div class="form-group">
-                <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder=" أدخل المبلغ المطلوب-أقل مبلغ $20">
-            </div>
-            <div class="form-group ">
-                <label for="password"></label>
-                <input type="text" class="form-control"  id="password" placeholder="أدخل حساب باى بال لأستلام المبلغ">
-            </div>
+              </h3>
+              <h3>
+                  هدفك هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3>
+                  طموحك المالى هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3 >
+                  عدد النزلاء المسجلين من خلال رقم فندقك :
+                  <span>xxxxxx</span>
+              </h3>
+              <p>
+                  يمكنك زيادة أرباحك فى أى وقت , من خلال تسجيل المزيد من النزلاء من خلال رقم فندقك
 
-            <button class="change " >طلب الأرباح </button>
-        </form>
-    </div>
+<br>
+                  الجدول التالى يبين ما هو سقف أرباحك , أعتماداً على عدد النزلاء المسجلين من خلال رقم فندقك
+
+              </p>
+          </div>
+      </div>
+  </div>
 </section>
+<!--
+
+<section id="sections">
+
+    Your Business Commitment
+    you have determined your business commit
+
+    your goal ( your dream) : xxxx
+
+    your financial goal : xxxx
+
+    registered guests from your hotel number : xxxx
+
+
+
+
+
+    you can increase your hotel profits any time , by registered more guests from your hotel number
+
+    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
+
+<div class="container">
+    <div class="section-back">
+        <a href="hotel-sections.html">Back to Sections</a>
+    </div>
+    <div class="section-title">
+        <h2><a href="#">
+            My Hotel Info:
+        </a></h2>
+    </div>
+    <div class="hotel-info">
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Owner Name :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Email : Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Birth Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Country :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Gender :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Open Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Your Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            You Have Registered as a Guest in Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+    </div>
+</div>
+</section>
+-->
 <!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
 <section class="hotel-guest">
     <div class="container">
-        <div class="options">
-            <h3>
-                <a href="#">
-                تقرير الأرباح
-                </a>
-            </h3>
+        <div id="rtl-direction">
+            <table>
+                <tr>
+
+                    <th>عدد نزلاء فندقك</th>
+                    <th>سقف ارباح فندقك</th>
+
+                </tr>
+                <tr>
+                    <td>1 نزيل </td>
+                    <td>$100</td>
+
+
+                </tr>
+                <tr>
+                    <td>2 نزلاء</td>
+                    <td>$1000</td>
+
+
+                </tr>
+                <tr>
+                    <td>3 نزلاء</td>
+                    <td>$30,000</td>
+
+
+                </tr>
+                <tr>
+                    <td> 4 نزلاء</td>
+                    <td>$40,000</td>
+
+
+                </tr>
+                <tr>
+                    <td>5 نزلاء</td>
+                    <td>$50,000</td>
+
+
+                </tr>
+                <tr>
+                    <td>6 نزلاء</td>
+                    <td>$300,000</td>
+
+
+                </tr>
+                <tr>
+                    <td> 7 نزلاء</td>
+                    <td>$1,000,000</td>
+
+                </tr>
+                <tr>
+                    <td>أكثر من 7 نزلاء</td>
+                    <td>$ سقف مفتوح </td>
+
+                </tr>
+
+            </table>
         </div>
-        <table>
-            <tr>
-                <th>#</th>
-                <th>المبلغ</th>
-                <th>تاريخ الطلب</th>
-                <th>مرسل علي حساب باي بال </th>
-                <th>الاجراء</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
 
-
-
-            </tr>
-            <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>3</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>6</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>8</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>9</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>10</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-        </table>
     </div>
 </section>
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
