--- a/تغيير كلمة السر.html
+++ b/تغيير كلمة السر.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/cities.css">
+    <link rel="stylesheet" href="css/info/forget-pass.css">
     <link rel="stylesheet" href="css/style-rtl.css">
-
-
 </head>
 <body>
+
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,11 +46,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="hotel-cities-report.html">English</a>
+                        <a class="lang-text" href="change-hotel-password.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تقرير المدن الفندقية.html">Arabic</a>
+                            <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
                         </div>
 
                     </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="hotel-cities-report.html">English</a>
+                            <a class="lang-text" href="change-hotel-password.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تقرير المدن الفندقية.html">Arabic</a>
+                                <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
                             </div>
 
                         </div>
@@ -150,7 +150,7 @@
                 <a  href="تسجيل%20نزيل%20جديد.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="تسجيل%20الدخول.html">دخول حساب فندقى</a>
+                <a  href="تسجيل%20دخول%20حساب%20فندقى.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -164,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -185,7 +185,7 @@
             </li>
 
             <li>
-                <a href="تقرير المدن الفندقية.html">
+                <a href="تقرير%20المدن%20الفندقية.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -216,7 +216,7 @@
 
             </li>
             <li>
-                <a href="الأرباح.html">
+                <a href="طلب%20الأرباح.html">
 
 
                     طلب الأرباح
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-                <a href="تغيير%20الباسورد.html ">
+                <a href="تغيير الباسورد.html">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -293,172 +293,50 @@
 
 </section>
 <!-- end of nav-->
+<section id="sections-hotel" >
+ <div id="change-pass">
+     <div class="container">
+         <div class="section-back">
+             <a href="أقسام%20الفندق.html">الرجوع لأقسام الفندق</a>
+         </div>
+     </div>
+     <div class="container">
+         <div class="hotel-info">
+             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+             >
+                 <a href="#">
+                     تغيير كلمة السر للفندق
+                 </a>
+             </h3>
 
-
+         </div>
+     </div>
+ </div>
+</section>
 <!-- start of form-->
-<section id="sections-hotel">
-<div id="cities">
+<section id="form">
+
+
     <div class="container">
-        <div class="section-back">
-            <a href="من%20نحن.html">الرجوع أقسام الفندق </a>
-        </div>
-    </div>
-    <div class="container">
-        <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="#">
-                    تقرير المدن الفندقية
-                </a>
-            </h3>
 
-        </div>
+        <form action="#" class="form">
+            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
+                <label for="number"></label>
+                <input type="password" class="form-control" id="number" placeholder="أدخل كلمة السر الحاليه للفندق">
+            </div>
+            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder="أدخل كلمة السر الجديده">
+            </div>
+            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
+                <label for="passwordd"></label>
+                <input type="password" class="form-control"  id="passwordd" placeholder="أدخل كلمة السر الجديده مره أخرى">
+            </div>
+            <button class="change wow fadeInRight"  data-wow-duration="6s"  >تغيير كلمة السر للفندق</button>
+        </form>
     </div>
-</div>
 </section>
-<!--
-
-<section id="sections">
-
-    Your Business Commitment
-    you have determined your business commit
-
-    your goal ( your dream) : xxxx
-
-    your financial goal : xxxx
-
-    registered guests from your hotel number : xxxx
-
-
-
-
-
-    you can increase your hotel profits any time , by registered more guests from your hotel number
-
-    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-
-<div class="container">
-    <div class="section-back">
-        <a href="hotel-sections.html">Back to Sections</a>
-    </div>
-    <div class="section-title">
-        <h2><a href="#">
-            My Hotel Info:
-        </a></h2>
-    </div>
-    <div class="hotel-info">
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Owner Name :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Email : Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Birth Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Country :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Gender :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Open Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Your Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            You Have Registered as a Guest in Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-    </div>
-</div>
-</section>
--->
 <!-- end of form -->
-<!-- end of nav-->
-<!-- Table -->
-<section class="hotel-guest">
-    <div class="container">
-
-        <table>
-            <tr>
-
-                <th>المدن الفندقية</th>
-                <th>عدد نزلاء المدينة</th>
-
-            </tr>
-            <tr>
-                <td>المدينة1</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 2</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 3</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 4</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 5</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 6</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>المدينة 7</td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>المدينة8 </td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>المدينة 9</td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>المدينة10 </td>
-                <td></td>
-
-            </tr>
-        </table>
-    </div>
-</section>
-<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
