--- a/تقرير بنزلاء فندقى.html
+++ b/تقرير بنزلاء فندقى.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/forget-pass.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
+    <link rel="stylesheet" href="css/info/hotel-guest.css">
     <link rel="stylesheet" href="css/style-rtl.css">
+
 </head>
 <body>
-
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,11 +46,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="change-hotel-password.html">English</a>
+                        <a class="lang-text" href="my-hotel-guests-report.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
+                            <a class="lang-text" href="تقرير النزلاء.html">Arabic</a>
                         </div>
 
                     </div>
@@ -118,15 +118,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="change-hotel-password.html">English</a>
+                            <a class="lang-text" href="my-hotel-guests-report.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تغيير الباسورد.html">Arabic</a>
+                                <a class="lang-text" href="تقرير النزلاء.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
@@ -164,7 +165,7 @@
             <hr>
 
             <li>
-                <a href="بيانات.html">
+                <a href="بياناتى.html">
 
 
                     بياناتى
@@ -174,7 +175,7 @@
             </li>
 
             <li>
-                <a href="تقرير%20النزلاء.html">
+                <a href="تقرير النزلاء.html">
 
 
                     تقرير بنزلاء فندقى
@@ -255,7 +256,7 @@
             </li>
 
             <li>
-                <a href="تغيير الباسورد.html">
+                <a href="تغيير%20الباسورد.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -293,50 +294,120 @@
 
 </section>
 <!-- end of nav-->
-<section id="sections-hotel" >
- <div id="change-pass">
-     <div class="container">
-         <div class="section-back">
-             <a href="من%20نحن.html">الرجوع لأقسام الفندق</a>
-         </div>
-     </div>
-     <div class="container">
-         <div class="hotel-info">
-             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-             >
-                 <a href="#">
-                     تغيير كلمة السر للفندق
-                 </a>
-             </h3>
-
-         </div>
-     </div>
- </div>
-</section>
 <!-- start of form-->
-<section id="form">
+<section id="sections-hotel">
+   <div id="guest">
+       <div class="container">
+           <div class="section-back">
+               <a href="أقسام%20الفندق.html">الرجوع لأقسام الفندق </a>
+           </div>
+       </div>
+       <div class="container">
+           <div class="hotel-info">
+               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                   <a href="#">
+                       تقرير بنزلاء فندقى
+                   </a>
+               </h3>
 
+           </div>
+       </div>
+   </div>
 
-    <div class="container">
-
-        <form action="#" class="form">
-            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
-                <label for="number"></label>
-                <input type="password" class="form-control" id="number" placeholder="أدخل كلمة السر الحاليه للفندق">
-            </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
-                <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="أدخل كلمة السر الجديده">
-            </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
-                <label for="passwordd"></label>
-                <input type="password" class="form-control"  id="passwordd" placeholder="أدخل كلمة السر الجديده مره أخرى">
-            </div>
-            <button class="change wow fadeInRight"  data-wow-duration="6s"  >تغيير كلمة السر للفندق</button>
-        </form>
-    </div>
 </section>
 <!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
+<section class="hotel-guest">
+    <div class="container">
+
+        <table>
+            <tr>
+                <th>#</th>
+                <th>أسم النزيل</th>
+                <th>رقم الغرفة </th>
+                <th>تاريخ فتح الغرفة </th>
+                <th>بلد النزيل </th>
+                <th>هاتف النزيل </th>
+                <th>البريد الألكتروني</th>
+
+            </tr>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+
+        </table>
+    </div>
+</section>
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
